--- a/examples/package.json
+++ b/examples/package.json
@@ -13,5 +13,8 @@
     "react-dom": "^0.14.7",
     "react-sortablejs": "latest",
     "sortablejs": "^1.4.2"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4"
   }
 }
