--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "babel": "^6.5.2",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.0",
-    "babel-eslint": "^5.0.0",
+    "babel-eslint": "^6.0.0-beta.5",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
