--- a/package.json
+++ b/package.json
@@ -40,15 +40,15 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "babel": "^6.5.2",
     "babel-cli": "^6.6.5",
-    "babel-core": "^6.7.0",
-    "babel-eslint": "^6.0.0-beta.5",
+    "babel-core": "^6.7.2",
+    "babel-eslint": "^6.0.0-beta.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "eslint": "~2.2.0",
+    "coveralls": "^2.11.8",
+    "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.1.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.2.1",
