--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-sortablejs",
-  "version": "0.7.0",
-  "description": "A higher order React component for Sortable (https://github.com/RubaXa/Sortable).",
+  "version": "1.0.0",
+  "description": "A React component built on top of Sortable (https://github.com/RubaXa/Sortable).",
   "main": "lib/index.js",
   "scripts": {
     "prepublish": "npm run lint && npm run test && npm run build && npm run dist && npm run release",
