--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "mixin"
   ],
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0-0",
-    "react-dom": "^0.14.0 || ^15.0.0-0",
+    "react": "^0.14.0 || ^15.0.0",
+    "react-dom": "^0.14.0 || ^15.0.0",
     "sortablejs": "1.x"
   },
   "dependencies": {},
