--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: trusty
 language: node_js
 node_js:
   - '5'
@@ -7,4 +8,3 @@ node_js:
   - 'iojs'
 after_success:
   - npm run coveralls
-  - npm run coverage-clean
