--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "A React component built on top of Sortable (https://github.com/RubaXa/Sortable).",
   "main": "lib/index.js",
   "scripts": {
-    "prepublish": "npm run lint && npm run test && npm run build && npm run dist && npm run release",
-    "build": "babel ./src --out-dir ./lib",
-    "test": "./babel-tap --coverage test/*.js",
+    "prepublish": "npm run lint && npm test && npm run build && npm run dist && npm run build-examples && npm run release",
+    "build": "babel --out-dir ./lib ./src",
+    "build-examples": "cd examples; webpack",
     "dist": "webpack; BUILD_ENV=dist webpack",
     "release": "mkdir -p releases; cp -f dist/react-sortable.js releases/react-sortable-${npm_package_version}.js; cp -f dist/react-sortable.min.js releases/react-sortable-${npm_package_version}.min.js",
     "lint": "eslint ./src",
     "lint:fix": "eslint --fix ./src",
     "precommit-check": "npm run lint",
+    "test": "./babel-tap --coverage test/*.js",
     "coveralls": "./babel-tap --coverage --coverage-report=text-lcov test/*.js | node_modules/.bin/coveralls",
     "webpack-dev-server": "cd examples; webpack-dev-server --hot --inline --host 0.0.0.0 --port 8000"
   },
