--- a/bower.json
+++ b/bower.json
@@ -9,8 +9,8 @@
   ],
   "description": "A React component built on top of Sortable (https://github.com/RubaXa/Sortable).",
   "dependencies": {
-    "react": "~0.14.0",
-    "Sortable": "~1.4.2"
+    "react": "^0.14.0 || ^15.0.0",
+    "sortablejs": ">=1.5.0-rc1 || ^1.5.0"
   },
   "keywords": [
     "react",
