--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "precommit-check": "npm run lint",
     "test": "./babel-tap --coverage test/*.js",
     "coveralls": "./babel-tap --coverage --coverage-report=text-lcov test/*.js | node_modules/.bin/coveralls",
-    "webpack-dev-server": "cd examples; webpack-dev-server --hot --inline --host 0.0.0.0 --port 8000"
+    "dev": "cd examples; webpack-dev-server --hot --inline --host 0.0.0.0 --port 8000 --content-base ../docs"
   },
   "pre-commit": [
     "precommit-check"
@@ -44,26 +44,29 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.21.0",
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "coveralls": "^2.11.15",
-    "eslint": "^3.13.0",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.1",
-    "eslint-plugin-react": "^6.9.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "coveralls": "^2.11.16",
+    "eslint": "~3.15.0",
+    "eslint-config-trendmicro": "~0.5.1",
+    "eslint-loader": "~1.6.1",
+    "eslint-plugin-import": "~2.2.0",
+    "eslint-plugin-jsx-a11y": "~2.2.3",
+    "eslint-plugin-react": "~6.9.0",
     "lodash": "^4.17.4",
-    "react": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "sortablejs": ">=1.5.0-rc1 || ^1.5.0",
-    "tap": "^9.0.2",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.4.0",
+    "tap": "^10.1.0",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
   }
 }
