--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-jsx-a11y": "~2.2.3",
     "eslint-plugin-react": "~6.9.0",
     "lodash": "^4.17.4",
+    "nib": "^1.1.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "sortablejs": ">=1.5.0-rc1 || ^1.5.0",
