--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
     "react-dom": "^0.14.0 || ^15.0.0",
-    "sortablejs": ">=1.5.0-rc1 || ^1.5.0"
+    "sortablejs": "^1.5.1"
   },
   "dependencies": {},
   "devDependencies": {
