--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "nib": "^1.1.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "sortablejs": ">=1.5.0-rc1 || ^1.5.0",
+    "sortablejs": "^1.5.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
     "tap": "^10.1.0",
