--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
   "description": "A React component built on top of Sortable (https://github.com/RubaXa/Sortable).",
   "dependencies": {
     "react": "^0.14.0 || ^15.0.0",
-    "sortablejs": ">=1.5.0-rc1 || ^1.5.0"
+    "sortablejs": "^1.5.1"
   },
   "keywords": [
     "react",
