--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-sortablejs",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "A React component built on top of Sortable (https://github.com/RubaXa/Sortable).",
   "main": "lib/index.js",
   "scripts": {
@@ -40,7 +40,7 @@
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
     "react-dom": "^0.14.0 || ^15.0.0",
-    "sortablejs": ">=1.5.0-rc1 || ^1.5.0"
+    "sortablejs": "^1.5.1"
   },
   "dependencies": {},
   "devDependencies": {
@@ -63,7 +63,7 @@
     "nib": "^1.1.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "sortablejs": ">=1.5.0-rc1 || ^1.5.0",
+    "sortablejs": "^1.5.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
     "tap": "^10.1.0",
