--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-sortablejs",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "A React component built on top of Sortable (https://github.com/RubaXa/Sortable).",
   "main": "lib/index.js",
   "scripts": {
@@ -42,33 +42,35 @@
     "react-dom": "^0.14.0 || ^15.0.0",
     "sortablejs": "^1.5.1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "prop-types": "^15.5.8"
+  },
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.2",
+    "babel-loader": "^6.4.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "coveralls": "^2.11.16",
-    "eslint": "~3.15.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "coveralls": "^2.13.0",
+    "eslint": "~3.19.0",
     "eslint-config-trendmicro": "~0.5.1",
-    "eslint-loader": "~1.6.1",
+    "eslint-loader": "~1.7.1",
     "eslint-plugin-import": "~2.2.0",
     "eslint-plugin-jsx-a11y": "~2.2.3",
-    "eslint-plugin-react": "~6.9.0",
+    "eslint-plugin-react": "~6.10.3",
     "lodash": "^4.17.4",
     "nib": "^1.1.2",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "sortablejs": "^1.5.1",
     "stylus": "^0.54.5",
-    "stylus-loader": "^2.4.0",
-    "tap": "^10.1.0",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0",
-    "which": "~1.2.12"
+    "stylus-loader": "^3.0.1",
+    "tap": "^10.3.2",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.2",
+    "which": "~1.2.14"
   }
 }
