--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-sortablejs",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "A React component built on top of Sortable (https://github.com/RubaXa/Sortable).",
   "main": "lib/index.js",
   "scripts": {
@@ -61,6 +61,7 @@
     "eslint-plugin-import": "~2.2.0",
     "eslint-plugin-jsx-a11y": "~2.2.3",
     "eslint-plugin-react": "~6.10.3",
+    "html-webpack-plugin": "^2.28.0",
     "lodash": "^4.17.4",
     "nib": "^1.1.2",
     "react": "^15.5.4",
