--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-sortablejs",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "description": "A React component built on top of Sortable (https://github.com/RubaXa/Sortable).",
   "main": "lib/index.js",
   "scripts": {
@@ -38,12 +38,12 @@
     "mixin"
   ],
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0",
+    "react": "^0.14.0 || >=15.0.0",
+    "react-dom": "^0.14.0 || >=15.0.0",
     "sortablejs": "^1.5.1"
   },
   "dependencies": {
-    "prop-types": "^15.5.8"
+    "prop-types": ">=15.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -64,8 +64,8 @@
     "html-webpack-plugin": "^2.28.0",
     "lodash": "^4.17.4",
     "nib": "^1.1.2",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": ">=15.0.0",
+    "react-dom": ">=15.0.0",
     "sortablejs": "^1.5.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
