--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "peerDependencies": {
     "@types/sortablejs": "^1.10.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react-dom": ">=16.9.0",
     "sortablejs": "^1.10.0"
   },
   "dependencies": {
