--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "peerDependencies": {
     "@types/sortablejs": "^1.10.0",
-    "react": "^17.0.2",
+    "react": ">=16.9.0",
     "react-dom": ">=16.9.0",
     "sortablejs": "^1.10.0"
   },
