--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+.idea
 node_modules
 temp
 dist
 # todo - get story book only when releasing.
 storybook-static
 .parcel-cache
+yarn.lock
