--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "format": "npm-run-all format:*",
     "format:eslint": "yarn lint --fix",
     "format:prettier": "prettier --write \"src/**.{js,ts}\"",
-    "lint": "eslint \"src/**.{js,ts}\""
+    "lint": "eslint \"src/**.{js,ts}\"",
+    "phoenix": "rm -rf ./node_modules && rm -f yarn.lock && yarn install --prefer-online"
   },
   "peerDependencies": {
     "@types/sortablejs": "^1.10.0",
@@ -41,6 +42,8 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@parcel/packager-ts": "^2.2.0",
+    "@parcel/transformer-typescript-types": "^2.2.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "@types/classnames": "^2.2.10",
