--- a/package.json
+++ b/package.json
@@ -40,35 +40,35 @@
     "tiny-invariant": "1.2.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/git": "^9.0.0",
+    "@commitlint/cli": "11",
+    "@commitlint/config-conventional": "11",
+    "@semantic-release/changelog": "5",
+    "@semantic-release/git": "9",
     "@types/classnames": "^2.2.10",
     "@types/jest": "^26.0.14",
     "@types/node": "14.11.2",
-    "@types/react": "16.9.49",
-    "@types/react-dom": "16.9.8",
-    "@types/sortablejs": "^1.10.0",
+    "@types/react": ">=16.9.0",
+    "@types/react-dom": ">=16.9.0",
+    "@types/sortablejs": "1",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
-    "commitizen": "^4.2.1",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.10.0",
-    "eslint-plugin-react": "^7.21.2",
-    "husky": "^4.3.0",
-    "jest": "^26.4.2",
-    "lint-staged": "^10.4.0",
-    "npm-run-all": "^4.1.5",
-    "parcel": "^2.0.0-beta.1",
-    "prettier": "^2.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "semantic-release": "^17.1.2",
-    "sortablejs": "^1.10.0",
-    "ts-jest": "^26.4.0",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "commitizen": "4",
+    "cz-conventional-changelog": "3",
+    "eslint": "7",
+    "eslint-plugin-react": "7",
+    "husky": "4.3",
+    "jest": "26",
+    "lint-staged": "10",
+    "npm-run-all": "4",
+    "parcel": "2",
+    "prettier": "2.5",
+    "react": ">=16.9.0",
+    "react-dom": ">=16.9.0",
+    "semantic-release": "17",
+    "sortablejs": "1",
+    "ts-jest": "26",
+    "ts-node": "9",
+    "typescript": "4"
   },
   "commitlint": {
     "extends": [
