--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   "devDependencies": {
     "@commitlint/cli": "11",
     "@commitlint/config-conventional": "11",
+    "@parcel/packager-ts": "2.2.0",
+    "@parcel/transformer-typescript-types": "2.2.0",
     "@semantic-release/changelog": "5",
     "@semantic-release/git": "9",
     "@types/classnames": "^2.2.10",
