--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "@types/react": ">=16.9.0",
     "@types/react-dom": ">=16.9.0",
     "@types/sortablejs": "1",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "4.33",
+    "@typescript-eslint/parser": "4.33",
     "commitizen": "4",
     "cz-conventional-changelog": "3",
     "eslint": "7",
